# vend_mini

./: .gitignore  LICENSE  NEW_OTA.py  README.md  app_vend.py  app_vend_requirements.txt  create_admin.py  fix_screen.py  package-lock.json  package.json  test_sensor.py  tsconfig.json  updates.json  vite.config.js
OTA/: ordering_system_0.1.7_amd64.deb.sig
builds/: ordering_system_0.1.0_arm64.deb.sig
src/: App.jsx  App.tsx  AppHelpers.jsx  AppHelpers.tsx  AppVisualHelpers.tsx  hardwareHelpers.js  hardwareHelpers.jsx  hardwareHelpers.tsx  imageImporter.jsx  imageImporter.tsx  main.tsx  updateHandler.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  motion_sensor.rs  nfc.rs  server.rs  users_database.rs
src-tauri/src/static/: index.html
src/Components/: Button.jsx  Button.tsx  CategoryIndicator.jsx  CategoryIndicator.tsx  Modal.jsx  Modal.tsx  PriceStatusPill.jsx  PriceStatusPill.tsx  ProductCard.jsx  ProductCard.tsx  ProductsEditor.jsx  QuantityBadge.tsx  ScreenSaver.jsx  ScreenSaver.tsx
src/TestData/: products.js
src/test/: AppHelpers.test.spec.tsx  Button.test.spec.tsx  CategoryIndicator.test.spec.tsx  Modal.test.spec.tsx  PriceStatusPill.test.spec.tsx  ProductCard.test.spec.tsx  QuantityBadge.test.spec.tsx  ScreenSaver.test.spec.tsx  hardwareHelpers.test.spec.tsx  setup.js
