[package]
name = "ordering_system"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ordering_system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ordering_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
rppal = "0.19"
tauri-plugin-fs = "2"

embedded-hal = "1.0"
linux-embedded-hal = "0.4.0"
embedded-hal-bus = "0.2.0"
anyhow = "1.0"

mfrc522 = { version = "0.8", features = ["std"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
